--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,26 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        {
+            "type": "java",
+            "name": "AppUI",
+            "request": "launch",
+            "mainClass": "gui.main.AppUI",
+            "projectName": "PROJET_PAA_a803772b"
+        },
         {
             "type": "java",
             "name": "Test simple",
             "request": "launch",
             "mainClass": "main.Main",
-            "args": "instance1 10"
+            "args": "instance1 10",
+            "vmArgs": "--module-path C:/GeetSpace/javafx/lib --add-modules javafx.controls,javafx.fxml"
         }
+    ],
+    "java.project.sourcePaths": [
+        "src"
+    ],
+    "java.project.referencedLibraries": [
+        "C:\\GeetSpace\\javafx\\lib\\*"
     ]
 }
