Ajout des derniers tests unitaires, correction de bugs minimes

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
             "name": "Test simple",
             "request": "launch",
             "mainClass": "main.Main",
-            "args": "instance1 10"
+            "args": "instance_fausse3 10"
         }
     ],
     "java.project.sourcePaths": [
